# social-capital-survey

survey-kiosk/: .env.example  .gitignore  Procfile  README.md  pyproject.toml
survey-kiosk/config/: settings.py  urls.py
survey-kiosk/docs/: 01-tech-stack.md  02-data-model.md  03-controllers-and-flows.md  04-templates-and-frontend.md  05-admin-and-operations.md  README.md
survey-kiosk/imports/: QUESTION_FIELDS.md  long_survey.json  mvp-survey.json  mvp-survey2.json  template.json
survey-kiosk/survey/: admin.py  emails.py  forms.py  json_translate.py  models.py  question_schema.py  question_types.py  tests.py  tokens.py  urls.py  views.py
survey-kiosk/survey/management/commands/: expire_sessions.py  import_survey.py  purge_data.py  seed_demo.py
survey-kiosk/survey/migrations/: 0001_initial.py  0002_answer_value_json_question_config_json.py  0003_remove_legacy_columns.py
survey-kiosk/survey/static/survey/: app.css  grid.js  grid_preference_flow.js  matrix_grid.js  preview_state.js
survey-kiosk/survey/templates/admin/survey/prizecode/: change_list.html  upload.html
survey-kiosk/survey/templates/survey/: _qr.html  base.html  claim.html  claim_pending.html  consent.html  expired_session.html  expired_token.html  kiosk.html  prize.html  question.html  verify_invalid.html
survey-kiosk/survey/templates/survey/question_types/: grid_preference_flow.html  image_grid.html  likert.html  matrix_with_grid.html  multi.html  multi_matrix.html  short_text.html  single.html
survey-kiosk/survey/templatetags/: survey_extras.py
(+8 files in other folders)
