[project]
name = "survey-kiosk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1,<5.2",
    "django-anymail[postmark]>=15.0",
    "django-htmx>=1.27.0",
    "django-ratelimit>=4.1.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "qrcode[pil]>=8.2",
    "whitenoise>=6.12.0",
]
